<resources>
    <string name="app_name">Tipeaze</string>

    <string name="party_text">Party</string>
    <string name="personal_text">Personal</string>

    <string name="illegalUriMessage">That Uri didn\'t match any recorded pointers</string>

    <string name="dialogTotalText">Total</string>

    <string name="tip">Tip</string>
    <string name="tax">Tax</string>
    <string name="product">Product</string>
    <string name="you_pay">You Pay</string>
    <string name="each_pay">Each Pay</string>

    <!--Text for the addTotalDialog buttons -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="delete">DEL</string>


    <string name="accessibility_personal_icon">Icon for bill prices for the person.</string>
    <string name="accessibility_party_icon">Icon for bill prices for the party.</string>

    <string name="total">Total</string>
    <string name="per_person">Per Person</string>


    <string name="dummyPercentage">0%</string>
    <string name="dummPrice">$0.00</string>
</resources>
